--- a/Translation/item.json
+++ b/Translation/item.json
@@ -27961,6 +27961,82 @@
 		"th": "",
 		"id": ""
 	},
+    "item.71073.name": {
+		"en": "White Cloak - I",
+		"fr": "Cape Blanche - I",
+		"es": "",
+		"zh-cn": "",
+		"zh-tw": "",
+		"kr": "",
+		"ru": "",
+		"tr": "",
+		"de": "",
+		"jp": "",
+		"pt": "",
+		"vi": "",
+		"ar": "",
+		"it": "",
+		"pl": "",
+		"th": "",
+		"id": ""
+	},
+	"item.71074.name": {
+		"en": "White Cloak - II",
+		"fr": "Cape Blanche - II",
+		"es": "",
+		"zh-cn": "",
+		"zh-tw": "",
+		"kr": "",
+		"ru": "",
+		"tr": "",
+		"de": "",
+		"jp": "",
+		"pt": "",
+		"vi": "",
+		"ar": "",
+		"it": "",
+		"pl": "",
+		"th": "",
+		"id": ""
+	},
+	"item.71075.name": {
+		"en": "White Cloak - III",
+		"fr": "Cape Blanche - III",
+		"es": "",
+		"zh-cn": "",
+		"zh-tw": "",
+		"kr": "",
+		"ru": "",
+		"tr": "",
+		"de": "",
+		"jp": "",
+		"pt": "",
+		"vi": "",
+		"ar": "",
+		"it": "",
+		"pl": "",
+		"th": "",
+		"id": ""
+	},
+	"item.71076.name": {
+		"en": "White Cloak - IV",
+		"fr": "Cape Blanche - IV",
+		"es": "",
+		"zh-cn": "",
+		"zh-tw": "",
+		"kr": "",
+		"ru": "",
+		"tr": "",
+		"de": "",
+		"jp": "",
+		"pt": "",
+		"vi": "",
+		"ar": "",
+		"it": "",
+		"pl": "",
+		"th": "",
+		"id": ""
+	},
 	"item.74000.name": {
 		"en": "Abel - I",
 		"fr": "Abel - I",
