--- a/Translation/item.json
+++ b/Translation/item.json
@@ -15324,6 +15324,25 @@
         "th":"",
         "id":""
     },
+    "item.6086.name":{
+        "en":"Chun Li (Grenadine)",
+        "fr":"Chun Li (Grenadine)",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "item.7000.name":{
         "en":"Minor Healing Potion",
         "fr":"Potion de Guérison Mineure",
