--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -1975,6 +1975,25 @@
         "th":"",
         "id":""
     },
+    "UI.windows.servant.title":{
+        "en":"Servant",
+        "fr":"Serviteur",
+        "es":"",
+        "zh-cn":"仆人",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "UI.windows.bag.title":{
         "en":"Bag",
         "fr":"Sac à Dos",
