--- a/Translation/item.json
+++ b/Translation/item.json
@@ -15343,6 +15343,25 @@
         "th":"",
         "id":""
     },
+    "item.6087.name":{
+        "en":"Neat Bangs (Black)",
+        "fr":"Frange soignée (Noir)",
+        "es":"",
+        "zh-cn":"齐刘海 (黑发)",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"Mái Gọn (Tóc đen)",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "item.7000.name":{
         "en":"Minor Healing Potion",
         "fr":"Potion de Guérison Mineure",
