Glowing Red Cloud

--- a/Translation/item.json
+++ b/Translation/item.json
@@ -27143,6 +27143,25 @@
 		"th": "",
 		"id": ""
 	},
+	"item.70102.name": {
+		"en": "Glowing Red Cloud - IV",
+		"fr": "Nuage Rouge Fluorescent - IV",
+		"es": "",
+		"zh-cn": "",
+		"zh-tw": "",
+		"kr": "",
+		"ru": "",
+		"tr": "",
+		"de": "",
+		"jp": "",
+		"pt": "",
+		"vi": "",
+		"ar": "",
+		"it": "",
+		"pl": "",
+		"th": "",
+		"id": ""
+	},
     "item.71001.name": {
 		"en": "Angel Wings - I",
 		"fr": "Ailes d'Ange - I",
