--- a/Translation/item.json
+++ b/Translation/item.json
@@ -28094,6 +28094,44 @@
 		"th": "",
 		"id": ""
 	},
+	"item.71080.name": {
+		"en": "Blue Aura - IV",
+		"fr": "Aura Bleu - IV",
+		"es": "",
+		"zh-cn": "",
+		"zh-tw": "",
+		"kr": "",
+		"ru": "",
+		"tr": "",
+		"de": "",
+		"jp": "",
+		"pt": "",
+		"vi": "",
+		"ar": "",
+		"it": "",
+		"pl": "",
+		"th": "",
+		"id": ""
+	},
+	"item.71084.name": {
+		"en": "Pink Aura - IV",
+		"fr": "Aura Rose - IV",
+		"es": "",
+		"zh-cn": "",
+		"zh-tw": "",
+		"kr": "",
+		"ru": "",
+		"tr": "",
+		"de": "",
+		"jp": "",
+		"pt": "",
+		"vi": "",
+		"ar": "",
+		"it": "",
+		"pl": "",
+		"th": "",
+		"id": ""
+	},
 	"item.74000.name": {
 		"en": "Abel - I",
 		"fr": "Abel - I",
