Proof of Savior

--- a/Translation/item.json
+++ b/Translation/item.json
@@ -22651,6 +22651,25 @@
         "th":"",
         "id":""
     },
+    "item.10200.name":{
+        "en":"Proof of Savior",
+        "fr":"Preuve du Sauveur",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "item.10500.name":{
         "en":"[D]Carrion Metal Piece",
         "fr":"[D]Pièce de Métal Nécrophage",
@@ -32480,6 +32499,25 @@
         "jp":"",
         "pt":"",
         "vi":"Nguyên Liệu Trang Bị Cấp 70 Tư Chất A",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.10200.description":{
+        "en":"Lv. 100 Gear Material. Can also be found in guild shop",
+        "fr":"Matériaux d'Équipement Nv. 100. Peut aussi être trouvé dans le Magasin de Guilde",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
         "ar":"",
         "it":"",
         "pl":"",
