--- a/Translation/tooltip.json
+++ b/Translation/tooltip.json
@@ -246,6 +246,82 @@
         "th":"",
         "id":""
     },
+    "tooltip.item.gems-stats":{
+        "en":"Gem Stats",
+        "fr":"Stats des Gemmes",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "tooltip.item.gem-slot.red":{
+        "en":"Red Socket",
+        "fr":"Emplacement Rouge",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "tooltip.item.gem-slot.blue":{
+        "en":"Bleu Socket",
+        "fr":"Emplacement Bleu",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "tooltip.item.gem-slot.orange":{
+        "en":"Orange Socket",
+        "fr":"Emplacement Orange",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "tooltip.skill.passive":{
         "en":"Passive",
         "fr":"Passif",
