--- a/Translation/tooltip.json
+++ b/Translation/tooltip.json
@@ -322,6 +322,44 @@
         "th":"",
         "id":""
     },
+    "tooltip.item.gem.red":{
+        "en":"Correspond to a Red or Orange socket",
+        "fr":"Correspond à un emplacement Rouge ou Orange",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "tooltip.item.gem.blue":{
+        "en":"Correspond to a Blue or Orange socket",
+        "fr":"Correspond à un emplacement Bleu ou Orange",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "tooltip.skill.passive":{
         "en":"Passive",
         "fr":"Passif",
