--- a/Translation/tooltip.json
+++ b/Translation/tooltip.json
@@ -285,7 +285,7 @@
         "id":""
     },
     "tooltip.item.gem-slot.blue":{
-        "en":"Bleu Socket",
+        "en":"Blue Socket",
         "fr":"Emplacement Bleu",
         "es":"",
         "zh-cn":"",
