--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -1443,6 +1443,196 @@
         "th":"",
         "id":""
     },
+   	"UI.stat.GEM_STUN.short":{
+		"en":"Stun Gem",
+		"fr":"Gemme Étourdi.",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+	"UI.stat.GEM_PARALYSE.short":{
+		"en":"Paralyse Gem",
+		"fr":"Gemme Paralysie",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+	"UI.stat.GEM_POISON.short":{
+		"en":"Poison Gem",
+		"fr":"Gemme Poison",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+	"UI.stat.GEM_SLOW.short":{
+		"en":"Slow Gem",
+		"fr":"Gemme Ralentis.",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+	"UI.stat.GEM_SILENCE.short":{
+		"en":"Silence Gem",
+		"fr":"Gemme Silence",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+	"UI.stat.GEM_ANTI_STUN.short":{
+		"en":"Anti Stun Gem",
+		"fr":"Gemme Anti Étourdi.",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+	"UI.stat.GEM_ANTI_PARALYSE.short":{
+		"en":"Anti Paralyze Gem",
+		"fr":"Gemme Anti Paralysie",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+	"UI.stat.GEM_ANTI_POISON.short":{
+		"en":"Anti Poison Gem",
+		"fr":"Gemme Anti Poison",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+	"UI.stat.GEM_ANTI_SLOW.short":{
+		"en":"Anti Slow Gem",
+		"fr":"Gemme Anti Ralenti.",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+	"UI.stat.GEM_ANTI_SILENCE.short":{
+		"en":"Anti Silence Gem",
+		"fr":"Gemme Anti Silence",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
     "UI.quest.seek":{
         "en":"Seek",
         "fr":"Allez voir",
