Fortify gems combine

--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -7656,6 +7656,44 @@
         "th":"",
         "id":""
     },
+    "UI.windows.fortify.gem.requirement.count":{
+        "en":"{0} of the same gems are required to combine into the next level",
+        "fr":"{0} gemmes identiques sont requises pour pouvoir les fusionner en une gemme de niveau supérieur",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "UI.windows.fortify.gem.requirement.cost":{
+        "en":"Combining the gems will cost {0} Gold",
+        "fr":"Combiner les gemmes coûtera {0} d'or",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "UI.windows.mails.title":{
         "en":"Mail",
         "fr":"Courrier",
